# LiMalloc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  azure-pipelines.yaml  azure-pipelines.yml
benchmarks/: CMakeLists.txt  main.benchmarks.cpp
cmake/: CompileOptions.cmake  CompileOptionsTests.cmake  CppCheck.cmake  GlobalCompileOptions.cmake  InstallLibrary.cmake
configuration/Linux/: configuration.sh
configuration/MacOS/: configuration.sh
configuration/Windows/: configuration.bat
include/memory/: export.h  memory.h  type.h
include/memory/__details/: internal.h  linked_list.h
src/: CMakeLists.txt  memory.c
src/details/: linked_list.c  memory_impl.c  os.c
src/details/Unix/: prim.c
src/details/Windows/: prim.c
tests/: CMakeLists.txt  linked_list.tests.cpp  main.tests.cpp  unix.tests.cpp  windows.tests.cpp
